# simple-jvm

./: CMakeLists.txt  README.md
include/: accessflags.h  atype.h  classpath.h  cmd.h  config.h  descriptor.h  finder.h  log.h  std.h  type.h
include/classfile/: attribute.h  classfile.h  constant.h  field.h  loader.h  method.h  reader.h  std.h
include/jvm/classfile/: classfile.h  constant.h  field.h
include/jvm/engine/: engine.h  loader.h
include/libzip/: zip.h
include/opcode/: interpreter.h  reader.h
include/runtime/: loader.h  local_vartable.h  operand_stack.h  slot.h  thread.h  vartable_table.h
include/runtime/heap/: object.h
include/runtime/metaspace/: clazz.h  constant.h  field.h  method.h  object.h  string.h
include/runtime/metaspace/ref/: clazz.h  field.h  interface_method.h  method.h
lib/: libminizip.dylib  libzip.5.dylib  zip_file.hpp
src/: classpath.cpp  cmd.cpp  engine.cpp  finder.cpp  log.cpp  main.cpp
src/classfile/: attribute.cpp  constant.cpp  loader.cpp  reader.cpp
src/jvm/engine/: engine.cpp  loader.cpp
src/opcode/: interpreter.cpp  reader.cpp
src/runtime/: loader.cpp  local_vartable.cpp  operand_stack.cpp  slot.cpp  thread.cpp  vartable_table.cpp
src/runtime/metaspace/: clazz.cpp  constant.cpp  field.cpp  method.cpp  method_descriptor.cpp  object.cpp  string.cpp
src/runtime/metaspace/ref/: clazz.cpp  field.cpp  interface_method.cpp  method.cpp
